[package]
name = "wordle"
version = "0.1.0"
edition = "2021"
author = "Rosist"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
console = "0.15"
rand = "0.8.5"
clap = { version = "4.5.8", features = ["cargo"] }
ansi_term = "0.12"
yew = { version = "0.21.0", features = ["csr"] }
log = "0.4.22"
wasm-logger = "0.2"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Document", "HtmlElement", "Node"] }
gloo = { version = "0.11.0", features = ["futures"] }
wasm-bindgen-futures = "0.4"
stylist = {version = "0.13.0", features = ["parser"]}


[dev-dependencies]
lazy_static = "1.4"
assert-json-diff = "2.0"
ntest = "0.9"
pretty_assertions = "1.3"

[lib]
crate-type = ["cdylib"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false